@@ -1,5 +1,8 @@
 Version 1.3.1 (unreleased)
-*
+
+* Internal changes, not user visible
+  - change handling of (empty) filler elements in typed_block to fix
+    mismatching struct size in nested blocks
 
 ------------------------------------------
 Version 1.3 (12 August 2010)
